--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             </div>
             <div class="col-lg-5 col-md-12 d-flex justify-content-center" data-aos="fade-left" data-aos-delay="300">
                 <div class="hero-image-circle">
-                    <img src="Images/jainamimage.png" alt="Jainam Raninga" class="img-fluid rounded-circle">
+                    <img src="media/jainamimage.png" alt="Jainam Raninga" class="img-fluid rounded-circle">
                 </div>
             </div>
         </div>
@@ -330,7 +330,7 @@
     <section id="testimonials" class="section-padding">
         <div class="container">
             <div class="section-title" data-aos="fade-up-custom">
-                <h2>Some Clint Works</h2>
+                <h2>Clint Works</h2>
             </div>
             <div class="row" data-aos="fade-up-custom" data-aos-delay="100">
                 <div class="col-12">
@@ -345,7 +345,7 @@
                         </div>
                         <div class="testimonial-item">
                             <div class="testimonial-content">
-                                <div class="testimonial-img"><img src="Images/images.jpg" alt="KICT Team"></div>
+                                <div class="testimonial-img"><img src="media/images.jpg" alt="KICT Team"></div>
                                 <p>"Jainam's analytical skills and Technical Skill to the project were impressive. He delivered valuable insights that helped our team to build an amazing responsive website."</p>
                                 <h4>KICT Team</h4><span>Project Lead</span>
                                 <div class="rating"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></div>
