--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
                         <ul class="about-info">
                             <li><span>Name:</span> Jainam Raninga</li>
                             <li><span>Education:</span> B.Tech (Expected 2026)</li>
-                            <li><span>Focus:</span> Data-Driven Web Solutions</li>
+                            <li><span>Focus:</span> Data Science & Data Analysis</li>
                             <li><span>Contact:</span> <a href="mailto:jainamraninga@gmail.com">jainamraninga@gmail.com</a> | <a href="tel:+918490848484">+91 84908 48484</a></li>
                         </ul>
                     </div>
