--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             </div>
             <div class="col-lg-5 col-md-12 d-flex justify-content-center" data-aos="fade-left" data-aos-delay="300">
                 <div class="hero-image-circle">
-                    <img src="media/myimg.png" alt="Jainam Raninga" class="img-fluid rounded-circle">
+                    <img src="media/jainamimage.png" alt="Jainam Raninga" class="img-fluid rounded-circle">
                 </div>
             </div>
         </div>
