--- a/index.html
+++ b/index.html
@@ -45,15 +45,16 @@
                     <li class="nav-item"><a class="nav-link" href="#testimonials">Testimonials</a></li>
                     <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
                     <li class="nav-item ms-lg-3 mt-3 mt-lg-0">
-                        <a href="Jainam_Raninga_Resume.pdf" target="_blank" class="btn">Resume</a>
+                          <a href="Jainam_Raninga_Resume.pdf" target="_blank" 
+                           class="btn d-block w-100 d-lg-inline-block w-lg-auto">Resume</a>
+                    </li>
                     </li>
                 </ul>
             </div>
         </div>
     </nav>
 
-<!-- Hero Section -->
-<section id="home" class="hero-section">
+<!-- Hero Section --><section id="home" class="hero-section">
     <div id="particles-js"></div>
     <div class="container hero-content-container">
         <div class="row align-items-center">
@@ -67,6 +68,11 @@
                 <div class="hero-buttons" data-aos="fade-up" data-aos-delay="500">
                     <a href="#portfolio" class="btn btn-primary">Check Out My Work!</a>
                     <a href="#contact" class="btn">Get In Touch</a>
+                    <!-- NEW BUTTONS ADDED HERE -->
+                    
+                    <a href="Jainam_Raninga_Resume.pdf" class="btn" download="Jainam_Raninga_Resume.pdf">
+                        <i class="fas fa-file-alt"></i> Download Resume
+                    </a>
                 </div>
             </div>
             <div class="col-lg-5 col-md-12 d-flex justify-content-center" data-aos="fade-left" data-aos-delay="300">
