--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
                     <div class="portfolio-card">
                         <div class="portfolio-content-upper">
                             <div class="project-icon"><i class="fas fa-tv"></i></div>
-                            <h3><a href="https://team3.kictindia.com/" target="_blank" rel="noopener noreferrer">KICT Responsive Website</a></h3>
+                            <h3><a href="https://github.com/Jainam672/ResponsiveWebsite" target="_blank" rel="noopener noreferrer">KICT Responsive Website</a></h3>
                             <p class="project-description">An interactive online Learning platform It is Responsive, built with engaging UI/UX.</p>
                         </div>
                         <ul class="project-tech-list"><li>HTML</li><li>CSS</li><li>JavaScript</li><li>Bootstrap</li></ul>
